feat: Controller 기능 구현